welcome.lessons.welcome.array.array667.Array667.scala.error
array667:2: error: not found: type int
  var c:int = 0
        ^